# findoc-verifier-agent-open

./: .dockerignore  .env.docker.example  .env.example  .gitignore  Dockerfile  LICENSE  NOTICE  README.md  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml
app/: __init__.py  main.py  settings.py  task_store.py
app/agent/: __init__.py  (+8 more)
docs/: adversarial_benchmark_report.md  agent_capability_evidence.md  api.md  api_examples.md  architecture.md  china_public_annual_report_analysis.md  deployment.md  docker_smoke_report.md  edge_layout_benchmark_report.md  evaluation.md  gpu_validation_report.md  layout_accuracy_report.md  open_source_release.md  p0_agent_planning_and_context_repair.md  production_deployment.md  public_benchmark_results.md  soak_test_report.md  stability_recovery_report.md  standard_benchmark_report.md  technical_report.md
examples/: adversarial_expectations.yaml  adversarial_manifest.json  capability_evidence_report.json  edge_layout_expectations.json  edge_layout_manifest.json  evaluation_expectations.yaml  gpu_validation_evidence_report.json  layout_accuracy_expectations.json  sample_tasks.yaml
scripts/: build_adversarial_fixtures.py  build_edge_layout_fixtures.py  run_adversarial_evaluation.py  run_capability_evidence.py  run_cn_full_validation.py  run_edge_layout_benchmark.py  run_layout_accuracy_benchmark.py  run_soak_test.py  run_stability_smoke.py  run_standard_benchmark.py
tests/: test_api_contract.py  test_capability_evidence.py  test_evaluator.py  test_executor.py  test_repair.py  test_structure.py  test_task_store.py
(+28 files in other folders)
