[project]
name = "findoc-verifier-agent"
version = "0.1.0"
description = "A MinerU-based Data Agent for evidence-backed financial document structuring and verification."
readme = "README.md"
requires-python = ">=3.10"
license = "Apache-2.0"
dependencies = [
  "fastapi>=0.115.0",
  "uvicorn[standard]>=0.30.0",
  "pydantic>=2.8.0",
  "pydantic-settings>=2.4.0",
  "python-multipart>=0.0.9",
  "pyyaml>=6.0.2",
  "beautifulsoup4>=4.12.3",
  "httpx>=0.27.0"
]

[project.optional-dependencies]
dev = [
  "pdfplumber>=0.11.0",
  "pillow>=10.0.0",
  "pytest>=8.3.0",
  "pytest-asyncio>=0.23.0",
  "ruff>=0.6.0",
]
mineru = [
  "mineru[pipeline]>=2.0.0",
  "six>=1.16.0"
]

[tool.ruff]
line-length = 100
target-version = "py311"

[build-system]
requires = ["setuptools>=70.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["app*"]
exclude = ["runs*", "examples*", "docs*", "tests*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
